# firebirdsql_fdw

./: Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml  firebirdsql_fdw.control
.github/workflows/: ci.yml
docker/: firebird-init.sql
src/: lib.rs
src/fdw/: mod.rs
src/fdw/firebird_fdw/: firebird_fdw.rs  mod.rs  tests.rs
